--- a/src/main/resources/templates/account/accountList.html
+++ b/src/main/resources/templates/account/accountList.html
@@ -3,6 +3,33 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+
+<!-- 사용자 스크립트 추가 -->
+<th:block layout:fragment="script">
+
+    <script th:inline="javascript">
+        function makeTransaction(accountCode) {
+            alert(accountCode)
+            alert(typeof accountCode)
+
+            let form = document.createElement("form");
+            form.setAttribute("method", "post");
+            form.setAttribute("action", "/transaction/" + accountCode + "/new");
+
+            let input = document.createElement("input");
+            input.type = "hidden";
+            input.name = [[${_csrf.parameterName}]];
+            input.value = [[${_csrf.token}]];
+
+            form.appendChild(input);
+            document.body.appendChild(form);
+            form.submit();
+        }
+    </script>
+
+</th:block>
+
+
 <div layout:fragment="content">
 
     <table class="table table-striped">
@@ -19,12 +46,16 @@
             <td th:text="${account.bank.name}"></td>
             <td th:text="${account.name}"></td>
             <td th:text="${account.balance}"></td>
-            <td>
-                <a th:href="@{'/transaction/new/' + ${account.accountCode}}"
-                   class="btn btn-primary">송금</a>
-            </td>
+            <form th:action="@{/transaction/new/first}" method="get">
+                <td>
+                    <input type="hidden" name="accountCode" th:value="${account.accountCode}">
+                    <input type="hidden" name="accountName" th:value="${account.name}">
+                    <input type="hidden" name="balance" th:value="${account.balance}">
+                    <button class="btn btn-primary" type="submit">송금</button>
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                </td>
+            </form>
         </tr>
-
         </tbody>
     </table>
 
