--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,7 +3,7 @@
 <div class="footer" th:fragment="footer">
     <footer class="page-footer font-small cyan darken-3">
         <div class="footer-copyright text-center py-3">
-            2022 Shopping Mall Example WebSite
+            2022 Internet Banking WebSite
         </div>
     </footer>
 </div>
