--- a/src/main/resources/templates/transaction/transactionFormFirst.html
+++ b/src/main/resources/templates/transaction/transactionFormFirst.html
@@ -4,30 +4,33 @@
       layout:decorate="~{layouts/layout1}">
 
 <div layout:fragment="content">
-    <form action="/transaction/new/first" method="post">
+    <form action="/transaction/new/second" method="post">
         <input type="hidden" th:field="${senderAccountDto.accountCode}">
         <input type="hidden" th:field="${senderAccountDto.accountName}">
         <input type="hidden" th:field="${senderAccountDto.balance}">
-        <button type="submit" class="btn btn-gray">계좌 입력하기</button>
+        <button type="submit" class="btn btn-light">
+            <span><u class="fs-5 text-secondary">계좌번호 직접 입력</u></span>
+        </button>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     </form>
 
-    <h3>내 계좌로</h3>
+    <h3 class="mt-5">내 계좌로</h3>
     <div class="list-group w-100 mt-3">
-        <div class="list-group-item" th:each="receiverAccountDto : ${receiverAccountDtos}">
-            <form action="/transaction/new/first" method="post">
+        <div class="list-group-item" th:each="receiverAccountDto : ${myReceiverAccountDtos}">
+            <form action="/transaction/new/last" method="post">
                 <input type="hidden" th:field="${senderAccountDto.accountCode}">
                 <input type="hidden" th:field="${senderAccountDto.accountName}">
                 <input type="hidden" th:field="${senderAccountDto.balance}">
                 <div class="row">
                     <div class="col-3 d-flex justify-content-center align-items-center">
-                        <span th:text="${receiverAccountDto.bankName}"></span>
+                        <input type="text" class="form-control-plaintext" name="bankName" th:value="${receiverAccountDto.bankName}" readonly>
                     </div>
                     <div class="col-6">
                         <input type="text" class="form-control-plaintext" name="receiverAccountName" th:value="${receiverAccountDto.receiverAccountName}" readonly>
-                        <input type="text" class="form-control-plaintext" name="receiverAccountCode" th:value="${receiverAccountDto.receiverAccountCode}" readonly>
+                        <input type="text" class="form-control-plaintext text-muted" name="receiverAccountCode" th:value="${receiverAccountDto.receiverAccountCode}" readonly>
                     </div>
                     <div class="col-2 d-flex justify-content-center align-items-center">
+                        <input type="hidden" name="mine" value="true">
                         <button type="submit" class="btn btn-primary">보내기</button>
                     </div>
                     <div class="col-1 d-flex justify-content-center align-items-center">
@@ -38,6 +41,8 @@
             </form>
         </div>
     </div>
+
+    <h3 class="mt-5">최근 보낸 계좌</h3>
 
 </div>
 
