--- a/src/main/resources/templates/transaction/transactionFormSecond.html
+++ b/src/main/resources/templates/transaction/transactionFormSecond.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout1}">
 
-</body>
+<!-- 사용자 스크립트 추가 -->
+<th:block layout:fragment="script">
+
+    <script th:inline="javascript">
+        <!-- TODO: 계좌번호 입력하면 은행 자동으로 선택해주기 BankConstant prefix 이용 -->
+    </script>
+
+</th:block>
+
+<div layout:fragment="content">
+    <h1 class="mb-3">어떤 계좌로 보낼까요?</h1>
+    <form action="/transaction/new/secondToLast" method="post">
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="floatingAccountCode" name="receiverAccountCode">
+            <label for="floatingAccountCode">계좌번호 입력</label>
+        </div>
+        <div class="form-floating mb-3">
+            <select class="form-select" id="floatingBank" name="bankName">
+                <option value=""></option>
+                <option th:each="bank : ${banks}"
+                        th:value="${bank.name}"
+                        th:text="${bank.name}">
+                </option>
+            </select>
+            <label for="floatingBank">은행 선택</label>
+        </div>
+        <div>
+            <button class="btn btn-primary">확인</button>
+        </div>
+
+        <input type="hidden" th:field="${senderAccountDto.accountCode}">
+        <input type="hidden" th:field="${senderAccountDto.accountName}">
+        <input type="hidden" th:field="${senderAccountDto.balance}">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+    </form>
+
+</div>
+
 </html>
