--- a/src/main/resources/templates/transaction/transactionFormLast.html
+++ b/src/main/resources/templates/transaction/transactionFormLast.html
@@ -19,6 +19,11 @@
             <input class="fs-2 border-top-0 border-left-0 border-right-0" type="number" name="amount" placeholder="얼마나 옮길까요?">
         </div>
         <span class="fs-6 text-muted border rounded p-1" th:text="|잔액&bull;${senderAccountDto.balance}원 입력|"></span>
+
+        <div class="form-group w-25 mt-5">
+            <textarea class="form-control" name="memo" placeholder="메모"></textarea>
+        </div>
+
         <div class="mt-3">
             <button class="btn btn-primary" type="submit">다음</button>
         </div>
