Fix TransactionHistory paging with AJAX

--- a/src/main/resources/templates/transaction/transactionHistory.html
+++ b/src/main/resources/templates/transaction/transactionHistory.html
@@ -7,26 +7,31 @@
 <th:block layout:fragment="script">
     <script th:inline="javascript">
 
-        $(document).ready(function(){
-            $("#searchBtn").on("click",function(e) {
-                e.preventDefault();
-                page(0);
-            });
-        });
+        // $(document).ready(function(){
+        //     $("#searchBtn").on("click",function(e) {
+        //         e.preventDefault();
+        //         page(0);
+        //     });
+        // });
 
+        // ajax 비동기 페이징
         function page(page){
-            var accountCode = [[${targetAccount.accountCode}]]
-            var searchDateType = $("#searchDateType").val();
-            var searchTransactionType = $("#searchTransactionType").val();
-            var searchBy = $("#searchBy").val();
-            var searchQuery = $("#searchQuery").val();
 
+            const accountCode = [[${targetAccount.accountCode}]];
 
-            location.href="/transaction/history/" + page + "?accountCode=" + accountCode
-                + "&searchDateType=" + searchDateType
-                + "&searchTransactionType=" + searchTransactionType
-                + "&searchBy=" + searchBy
-                + "&searchQuery=" + searchQuery;
+            $.ajax({
+                url : "/transaction/history/ajax/" + page + "?accountCode=" + accountCode,
+                data: {
+                    searchDateType: $("#searchDateType").val(),
+                    searchTransactionType: $("#searchTransactionType").val(),
+                    searchBy: $("#searchBy").val(),
+                    searchQuery: $("#searchQuery").val(),
+                },
+                method: "GET",
+            }).done(function (fragment) {
+                console.log(fragment);
+                $(fragment).replaceAll("#target-div");
+            })
         }
 
     </script>
@@ -46,71 +51,75 @@
     <p th:text="|*{bankName} *{accountCode}|"></p>
     <h5 th:text="|*{{balance}}원|"></h5>
 
-    <div class="list-group-item"  th:each="transaction : ${transactions}">
-        <div class="row">
-            <div class="col-3">
-                <p th:text="${{transaction.transferDate}}"></p>
-                <p>나중에 이미지 넣어줄 것</p>
+    <div id="target-div">
+        <div class="list-group-item"  th:each="transaction : ${transactions}">
+            <div class="row">
+                <div class="col-3">
+                    <p th:text="${{transaction.transferDate}}"></p>
+                    <p>나중에 이미지 넣어줄 것</p>
+                </div>
+                <div class="col-3">
+                    <p th:if="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="${transaction.senderName}"></p>
+                    <p th:unless="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="${transaction.receiverName}"></p>
+                    <p th:text="${{transaction.transferTime}}"></p>
+                </div>
+                <div class="col-3">
+                    <p th:text="${transaction.memo}"></p>
+                </div>
+                <div class="col-3">
+                    <p class="text text-primary" th:if="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="|${{transaction.amount}}|"></p>
+                    <p class="text text-danger" th:unless="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="|-${{transaction.amount}}|"></p>
+                    <p th:if="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="${{transaction.receiverAccHisBal}}"></p>
+                    <p th:unless="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="${{transaction.senderAccHisBal}}"></p>
+                </div>
             </div>
-            <div class="col-3">
-                <p th:if="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="${transaction.senderName}"></p>
-                <p th:unless="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="${transaction.receiverName}"></p>
-                <p th:text="${{transaction.transferTime}}"></p>
-            </div>
-            <div class="col-3">
-                <p th:text="${transaction.memo}"></p>
-            </div>
-            <div class="col-3">
-                <p class="text text-primary" th:if="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="|${{transaction.amount}}|"></p>
-                <p class="text text-danger" th:unless="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="|-${{transaction.amount}}|"></p>
-                <p th:if="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="${{transaction.receiverAccHisBal}}"></p>
-                <p th:unless="${targetAccount.accountCode.equals(transaction.receiverAccountCode)}" th:text="${{transaction.senderAccHisBal}}"></p>
-            </div>
+        </div>
+
+        <div th:with="start=${(transactions.number/maxPage)*maxPage + 1}, end=(${(transactions.totalPages == 0) ? 1 : (start + (maxPage - 1) < transactions.totalPages ? start + (maxPage - 1) : transactions.totalPages)})" >
+            <ul class="pagination justify-content-center">
+
+                <li class="page-item" th:classappend="${transactions.first}?'disabled'">
+                    <a th:onclick="'javascript:page(' + ${transactions.number - 1} + ')'" aria-label='Previous' class="page-link">
+                        <span aria-hidden='true'>Previous</span>
+                    </a>
+                </li>
+
+                <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${transactions.number eq page -1}?'active':''">
+                    <a th:onclick="'javascript:page(' + ${page - 1} + ')'" th:inline="text" class="page-link">[[${page}]]</a>
+                </li>
+
+                <li class="page-item" th:classappend="${transactions.last}?'disabled'">
+                    <a th:onclick="'javascript:page(' + ${transactions.number + 1} + ')'" aria-label='Next' class="page-link">
+                        <span aria-hidden='true'>Next</span>
+                    </a>
+                </li>
+
+            </ul>
         </div>
     </div>
 
-    <div th:with="start=${(transactions.number/maxPage)*maxPage + 1}, end=(${(transactions.totalPages == 0) ? 1 : (start + (maxPage - 1) < transactions.totalPages ? start + (maxPage - 1) : transactions.totalPages)})" >
-        <ul class="pagination justify-content-center">
-
-            <li class="page-item" th:classappend="${transactions.first}?'disabled'">
-                <a th:onclick="'javascript:page(' + ${transactions.number - 1} + ')'" aria-label='Previous' class="page-link">
-                    <span aria-hidden='true'>Previous</span>
-                </a>
-            </li>
-
-            <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${transactions.number eq page -1}?'active':''">
-                <a th:onclick="'javascript:page(' + ${page - 1} + ')'" th:inline="text" class="page-link">[[${page}]]</a>
-            </li>
-
-            <li class="page-item" th:classappend="${transactions.last}?'disabled'">
-                <a th:onclick="'javascript:page(' + ${transactions.number + 1} + ')'" aria-label='Next' class="page-link">
-                    <span aria-hidden='true'>Next</span>
-                </a>
-            </li>
-
-        </ul>
-    </div>
-
-    <div class="form-inline justify-content-center" th:object="${transactionSearchDto}">
-        <select th:field="*{searchDateType}" class="form-control" style="width:auto;">
-            <option value="1m">1개월</option>
-            <option value="1d">1일</option>
-            <option value="1w">1주</option>
-            <option value="3m">3개월</option>
-        </select>
-        <select th:field="*{searchTransactionType}" class="form-control" style="width:auto;">
-            <option value="">전체</option>
-            <option value="deposit">입금</option>
-            <option value="withdraw">출금</option>
-        </select>
-        <select th:field="*{searchBy}" class="form-control" style="width:auto;">
-            <option value="receiverName">받은 사람 이름</option>
-            <option value="senderName">보낸 사람 이름</option>
-        </select>
-        <input th:field="*{searchQuery}" type="text" class="form-control" placeholder="검색어를 입력해주세요">
-        <button id="searchBtn" type="submit" class="btn btn-primary">검색</button>
-    </div>
-
+    <form th:action="@{/transaction/history/0}" role="form" method="get" th:object="${transactionSearchDto}">
+        <div class="form-inline justify-content-center">
+            <input type="hidden" name="accountCode" th:value="${targetAccount.accountCode}">
+            <select th:field="*{searchDateType}" class="form-control" style="width:auto;">
+                <option value="1m">1개월</option>
+                <option value="1d">1일</option>
+                <option value="1w">1주</option>
+                <option value="3m">3개월</option>
+            </select>
+            <select th:field="*{searchTransactionType}" class="form-control" style="width:auto;">
+                <option value="">전체</option>
+                <option value="deposit">입금</option>
+                <option value="withdraw">출금</option>
+            </select>
+            <select th:field="*{searchBy}" class="form-control" style="width:auto;">
+                <option value="receiverName">받은 사람 이름</option>
+                <option value="senderName">보낸 사람 이름</option>
+            </select>
+            <input th:field="*{searchQuery}" type="text" class="form-control" placeholder="검색어를 입력해주세요">
+            <button id="searchBtn" type="submit" class="btn btn-primary">검색</button>
+        </div>
+    </form>
 
 </div>
 
